test/functions/ferguson/query/query-generic-star-tuple-error.good
query-generic-star-tuple-error.chpl:17: error: unresolved call 'f((Wrapper(int(64)),Wrapper(owned GenericClass(int(64)))))'
query-generic-star-tuple-error.chpl:7: note: this candidate did not match: Wrapper.f
query-generic-star-tuple-error.chpl:17: note: because call is not written as a method call
query-generic-star-tuple-error.chpl:7: note: but candidate function is a method
query-generic-star-tuple-error.chpl:10: note: candidates are: f(x: 2*Wrapper)
